objects/Client_Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Contact Roles</relationshipLabel>
        <relationshipName>Client_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCI_Full_Name__c</fullName>
        <formula>Client_Contact_Individual__r.CCI_Full_Name__c</formula>
        <label>CCI Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_Business_Phone_Number__c</fullName>
        <label>Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCR_HIPAA_Quarterly_Trainings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPAA Quarterly Trainings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_HR_Trainings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Trainings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Key_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Key_Operational_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Operational Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Marketing_Content_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Content Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Quarterly_Tax_Package_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Tax Package Notices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contact_Individual__c</fullName>
        <label>Client Contact Individual</label>
        <referenceTo>Client_Contact_Individual__c</referenceTo>
        <relationshipLabel>Client Contact Roles</relationshipLabel>
        <relationshipName>Client_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Client Contact Role</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Client Contact Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>